cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(ASSIGNMENT2)

message("--Build CSC3002 Assignment2")

set(ASSIGNMENT2_DIR ${CMAKE_CURRENT_LIST_DIR})
include_directories(${ASSIGNMENT2_DIR}/src)
include_directories(${ASSIGNMENT2_DIR}/include)

file(GLOB ASSIGNMENT2_SOURCE ${ASSIGNMENT2_DIR}/src/*.cpp)
file(GLOB ASSIGNMENT2_HEADER ${ASSIGNMENT2_DIR}/include/*.h)
add_library(ASSIGNMENT2_LIB SHARED ${ASSIGNMENT2_SOURCE} ${ASSIGNMENT2_HEADER})

add_executable(ASSIGNMENT2_MAIN src/main.cpp ${ASSIGNMENT2_SOURCE} ${ASSIGNMENT2_HEADER})
target_link_libraries(ASSIGNMENT2_MAIN ASSIGNMENT2_LIB)